--- a/lab_3_pipeline/3.5.Deploy-Pipeline.ipynb
+++ b/lab_3_pipeline/3.5.Deploy-Pipeline.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -458,11 +458,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'StepName': 'Fraud-Basic-Endpoint',\n",
+       "  'StartTime': datetime.datetime(2023, 5, 10, 9, 42, 1, 317000, tzinfo=tzlocal()),\n",
+       "  'EndTime': datetime.datetime(2023, 5, 10, 9, 48, 54, 518000, tzinfo=tzlocal()),\n",
+       "  'StepStatus': 'Succeeded',\n",
+       "  'AttemptCount': 0,\n",
+       "  'Metadata': {'ProcessingJob': {'Arn': 'arn:aws:sagemaker:us-east-1:352676251571:processing-job/pipelines-mz68s6d03852-Fraud-Basic-Endpoint-MSg1lw3oWG'}}}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "execution.list_steps()"
    ]
@@ -519,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -536,13 +552,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fraud</th>\n",
+       "      <th>vehicle_claim</th>\n",
+       "      <th>total_claim_amount</th>\n",
+       "      <th>customer_age</th>\n",
+       "      <th>months_as_customer</th>\n",
+       "      <th>num_claims_past_year</th>\n",
+       "      <th>num_insurers_past_5_years</th>\n",
+       "      <th>policy_deductable</th>\n",
+       "      <th>policy_annual_premium</th>\n",
+       "      <th>customer_zip</th>\n",
+       "      <th>...</th>\n",
+       "      <th>collision_type_missing</th>\n",
+       "      <th>incident_severity_Major</th>\n",
+       "      <th>incident_severity_Minor</th>\n",
+       "      <th>incident_severity_Totaled</th>\n",
+       "      <th>authorities_contacted_Ambulance</th>\n",
+       "      <th>authorities_contacted_Fire</th>\n",
+       "      <th>authorities_contacted_None</th>\n",
+       "      <th>authorities_contacted_Police</th>\n",
+       "      <th>police_report_available_No</th>\n",
+       "      <th>police_report_available_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>23901.432507</td>\n",
+       "      <td>36201.432507</td>\n",
+       "      <td>56</td>\n",
+       "      <td>118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>750</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>98039</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 59 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fraud  vehicle_claim  total_claim_amount  customer_age  months_as_customer  \\\n",
+       "0      0   23901.432507        36201.432507            56                 118   \n",
+       "\n",
+       "   num_claims_past_year  num_insurers_past_5_years  policy_deductable  \\\n",
+       "0                     0                          1                750   \n",
+       "\n",
+       "   policy_annual_premium  customer_zip  ...  collision_type_missing  \\\n",
+       "0                   3000         98039  ...                       0   \n",
+       "\n",
+       "   incident_severity_Major  incident_severity_Minor  \\\n",
+       "0                        0                        0   \n",
+       "\n",
+       "   incident_severity_Totaled  authorities_contacted_Ambulance  \\\n",
+       "0                          1                                0   \n",
+       "\n",
+       "   authorities_contacted_Fire  authorities_contacted_None  \\\n",
+       "0                           0                           0   \n",
+       "\n",
+       "   authorities_contacted_Police  police_report_available_No  \\\n",
+       "0                             1                           0   \n",
+       "\n",
+       "   police_report_available_Yes  \n",
+       "0                            1  \n",
+       "\n",
+       "[1 rows x 59 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_preproc_path = f\"{test_preproc_dir_artifact}/test.csv\"\n",
+    "test_preproc_path = f\"{data_path}/test.csv\"\n",
     "test_df = pd.read_csv(test_preproc_path)\n",
     "test_df.head(1)\n"
    ]
@@ -556,11 +679,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "payload: \n",
+      " 23901.43250714285,36201.43250714285,56,118,0,1,750,3000,98039,2012,3,3,1,12300,9,12,3,14,0,0,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1\n"
+     ]
+    }
+   ],
    "source": [
     "# test_df 의 상위 1개 레코드를 사용\n",
     "payload = get_payload(test_df, label_col = 'fraud', verbose=False)\n",
@@ -577,11 +709,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction_prob: \n",
+      " ['0.10092484205961227']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "predictor = get_predictor(pipeline_endpoint_name, sagemaker_session, csv_deserializer)\n",
@@ -602,11 +743,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Deleted model: pipelines-avbjlp808wfb-fraud-basic-createmo-sq9b3zuv5a\n",
+      "--- Deleted endpoint: pipeline-endpoint-361627\n",
+      "--- Deleted endpoint_config: pipelines-avbjlp808wfb-fraud-basic-createmo-sq9b3zuv5a-config\n"
+     ]
+    }
+   ],
    "source": [
     "from src.p_utils import delete_endpoint\n",
     "\n",
