--- a/lab_1_training/1.1.SageMaker-Training.ipynb
+++ b/lab_1_training/1.1.SageMaker-Training.ipynb
@@ -47,9 +47,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "02f05d3f-12b6-47f0-b9a3-a74cd82794b1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add data-root and default-shm-size=10G\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Redirecting to /bin/systemctl restart docker.service\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Docker Restart\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#!/bin/bash\n",
+    "\n",
+    "DAEMON_PATH=\"/etc/docker\"\n",
+    "MEMORY_SIZE=10G\n",
+    "\n",
+    "FLAG=$(cat $DAEMON_PATH/daemon.json | jq 'has(\"data-root\")')\n",
+    "# echo $FLAG\n",
+    "\n",
+    "if [ \"$FLAG\" == true ]; then\n",
+    "    echo \"Already revised\"\n",
+    "else\n",
+    "    echo \"Add data-root and default-shm-size=$MEMORY_SIZE\"\n",
+    "    sudo cp $DAEMON_PATH/daemon.json $DAEMON_PATH/daemon.json.bak\n",
+    "    sudo cat $DAEMON_PATH/daemon.json.bak | jq '. += {\"data-root\":\"/home/ec2-user/SageMaker/.container/docker\",\"default-shm-size\":\"'$MEMORY_SIZE'\"}' | sudo tee $DAEMON_PATH/daemon.json > /dev/null\n",
+    "    sudo service docker restart\n",
+    "    echo \"Docker Restart\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "5296340a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import boto3\n",
@@ -66,9 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7551894e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "sagemaker_session = sagemaker.session.Session()\n",
@@ -77,9 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8f4a1511",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "bucket = sagemaker_session.default_bucket()\n",
@@ -97,9 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "837a9316",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "hyperparameters = {\n",
@@ -121,9 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7f383326",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "instance_count = 1\n",
@@ -140,9 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81c0b774-9be5-4e1c-a30e-f9ee3edaeeb3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "if instance_type in ['local', 'local_gpu']:\n",
@@ -155,9 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4dcee8ce-f51e-44da-9eac-84f9d4212281",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sagemaker.xgboost.estimator import XGBoost\n",
@@ -189,9 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ae944abb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "data_path=f's3://{bucket}/xgboost/dataset'\n",
@@ -200,10 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "24ceb810-675c-49c3-8137-6b0c85ae9cae",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-us-east-1-169691332404/xgboost/dataset'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if instance_type in ['local', 'local_gpu']:\n",
     "    from pathlib import Path\n",
@@ -225,10 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e5127e34",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker:Creating training-job with name: sagemaker-xgboost-2023-05-17-05-17-21-217\n"
+     ]
+    }
+   ],
    "source": [
     "estimator.fit(inputs = {'inputdata': inputs},\n",
     "                  wait=False)"
@@ -238,7 +328,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "274ab30b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "estimator.logs()"
@@ -258,7 +350,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6024e8f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -268,7 +362,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2925c8bf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "train_prep_df = pd.read_csv('../data/dataset/train.csv')\n",
@@ -279,7 +375,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4830231",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "train_prep_df.groupby('fraud').size()"
