--- a/lab_2_serving/2.1.Deploy.ipynb
+++ b/lab_2_serving/2.1.Deploy.ipynb
@@ -44,36 +44,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b88f96bb",
-   "metadata": {
-    "tags": []
-   },
+   "id": "cdf6352c-072d-47bb-9f52-5703f624d7d8",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys, IPython\n",
+    "import sys, IPython\n",
     "\n",
-    "# install_needed = True\n",
-    "# #install_needed = False\n",
+    "install_needed = True\n",
+    "#install_needed = False\n",
     "\n",
-    "# if install_needed:\n",
-    "#     print(\"===> Installing deps and restarting kernel. Please change 'install_needed = False' and run this code cell again.\")\n",
-    "#     !{sys.executable} -m pip install -U sagemaker locust pyngrok xgboost==1.3.1\n",
-    "#     IPython.Application.instance().kernel.do_shutdown(True)\n",
-    "# else:\n",
-    "#     import sagemaker, xgboost\n",
-    "#     print(f'SageMaker API version={sagemaker.__version__}, XGBoost version={xgboost.__version__}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08d7a081-7ee0-44f1-b65a-3d5e43d1a702",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "!pip install xgboost"
+    "if install_needed:\n",
+    "    print(\"===> Installing deps and restarting kernel. Please change 'install_needed = False' and run this code cell again.\")\n",
+    "    !{sys.executable} -m pip install -U sagemaker locust pyngrok xgboost==1.3.1\n",
+    "    IPython.Application.instance().kernel.do_shutdown(True)\n",
+    "else:\n",
+    "    import sagemaker, xgboost\n",
+    "    print(f'SageMaker API version={sagemaker.__version__}, XGBoost version={xgboost.__version__}')"
    ]
   },
   {
@@ -218,7 +204,9 @@
    },
    "outputs": [],
    "source": [
-    "!rm -rf model && mkdir model && tar -xzvf model.tar.gz -C model"
+    "!rm -rf model && mkdir model && cp -r ../lab_1_training/model/* ./model/\n",
+    "!rm -rf ./model/model.tar.gz\n",
+    "# !rm -rf model && mkdir model && tar -xzvf model.tar.gz -C model"
    ]
   },
   {
@@ -332,24 +320,35 @@
     "        raise ValueError(\n",
     "            \"Content type {} is not supported.\".format(request_content_type)\n",
     "        )\n",
+    "        \n",
     "\n",
-    "\n",
-    "## 아래 2개 함수를 완성하시면 됩니다.\n",
     "def predict_fn(input_data, model):\n",
     "    \"\"\"\n",
     "    SageMaker XGBoost model server invokes `predict_fn` on the return value of `input_fn`.\n",
     "\n",
     "    Return a two-dimensional NumPy array (predictions and scores)\n",
     "    \"\"\"\n",
-    "\n",
-    "    #~~~~~~~~~~~~~~~\n",
+    "    '''\n",
+    "        작성 필요\n",
+    "    '''\n",
+    "    return np.vstack((y_preds, y_probs))\n",
     "\n",
     "\n",
     "def output_fn(predictions, content_type=\"application/json\"):\n",
     "    \"\"\"\n",
     "    After invoking predict_fn, the model server invokes `output_fn`.\n",
     "    \"\"\"\n",
-    "    #~~~~~~~~~~~~~~~\n"
+    "    if content_type == \"text/csv\":\n",
+    "        return ','.join(str(x) for x in outputs)\n",
+    "    elif content_type == \"application/json\":\n",
+    "        outputs = json.dumps({\n",
+    "            'pred': predictions[0,:].tolist(),\n",
+    "            'prob': predictions[1,:].tolist()\n",
+    "        })        \n",
+    "        \n",
+    "        return outputs\n",
+    "    else:\n",
+    "        raise ValueError(\"Content type {} is not supported.\".format(content_type))"
    ]
   },
   {
@@ -371,7 +370,7 @@
    "id": "c7300ce7",
    "metadata": {},
    "source": [
-    "### Upload model artifacts to S3\n",
+    "### Upload model/source artifacts to S3\n",
     "압축한 모델 아티팩트를 Amazon S3로 복사합니다."
    ]
   },
@@ -385,8 +384,9 @@
    "outputs": [],
    "source": [
     "prefix = 'sm-special-webinar/deploy'\n",
-    "s3_path = f's3://{bucket}/{prefix}/model.tar.gz'\n",
-    "!aws s3 cp model.tar.gz {s3_path}"
+    "s3_model_path = f's3://{bucket}/{prefix}/model.tar.gz'\n",
+    "!cd model && tar -czvf model.tar.gz xgboost-model && mv model.tar.gz ../\n",
+    "!aws s3 cp model.tar.gz {s3_model_path}"
    ]
   },
   {
@@ -451,6 +451,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fafcb929-0cce-4579-a26f-e85207aef46d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "instance_type='local'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22630e10-578c-46ca-ab49-c392bb334e79",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "# source_dir=f\"file://{Path.cwd()}/src\"\n",
+    "\n",
+    "if instance_type in ['local', 'local_gpu']:\n",
+    "    from sagemaker.local import LocalSession\n",
+    "    \n",
+    "    sagemaker_session = LocalSession()\n",
+    "    sagemaker_session.config = {'local': {'local_code': True}}\n",
+    "    model_data=f\"file://{Path.cwd()}/model.tar.gz\"\n",
+    "else:\n",
+    "    sagemaker_session = sagemaker.session.Session()\n",
+    "    model_data=s3_model_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3dfcb78f",
    "metadata": {
     "tags": []
@@ -462,10 +498,12 @@
     "from sagemaker.image_uris import retrieve\n",
     "\n",
     "xgb_model = XGBoostModel(\n",
-    "    model_data=s3_path,\n",
+    "    model_data=model_data,\n",
+    "    source_dir=\"src\",\n",
     "    role=role,\n",
-    "    entry_point=\"src/inference.py\",\n",
+    "    entry_point=\"inference.py\",\n",
     "    framework_version=XGB_FRAMEWORK_VERSION,\n",
+    "    sagemaker_session=sagemaker_session\n",
     ")"
    ]
   },
@@ -490,7 +528,7 @@
    "source": [
     "xgb_predictor = xgb_model.deploy(\n",
     "    initial_instance_count=1,\n",
-    "    instance_type='local'\n",
+    "    instance_type=instance_type,\n",
     ")"
    ]
   },
@@ -663,155 +701,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69882923",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
-    "## 2.2. Deploy to Local Environment: Model class\n",
-    "\n",
-    "이번에는 `Model` 클래스로 로컬 환경에서 모델 서빙을 수행합니다. 여러분의 추론 환경을 커스터마이징하여 private ECR에 등록할 때 유용합니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b18643d",
-   "metadata": {},
-   "source": [
-    "### Create Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b3d696a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# If you need to create a sagemaker.model.Model, rather than sagemaker.xgboost.model.XGBoostModel\n",
-    "image_uri = sagemaker.image_uris.retrieve(\"xgboost\", region, XGB_FRAMEWORK_VERSION)\n",
-    "print(image_uri)\n",
-    "\n",
-    "xgb_model = Model(\n",
-    "    image_uri=image_uri,\n",
-    "    model_data=s3_path,\n",
-    "    role=role,\n",
-    "    entry_point=\"src/inference.py\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06d41094",
-   "metadata": {},
-   "source": [
-    "### Create Endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "632d087f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "xgb_predictor = xgb_model.deploy(\n",
-    "    initial_instance_count=1,\n",
-    "    instance_type='local'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c57e4ae",
-   "metadata": {},
-   "source": [
-    "### Create Predictor\n",
-    "\n",
-    "`Model` 클래스로 모델 생성 시, `Predictor` 클래스를 생성하고 직렬화 및 역직렬화 포맷을 지정합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78ef54b2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from sagemaker.predictor import Predictor\n",
-    "from sagemaker.serializers import CSVSerializer\n",
-    "from sagemaker.local import LocalSession\n",
-    "\n",
-    "endpoint_name = xgb_model.endpoint_name\n",
-    "local_sess = LocalSession()\n",
-    "\n",
-    "xgb_predictor = Predictor(\n",
-    "    endpoint_name=endpoint_name, \n",
-    "    sagemaker_session=local_sess,\n",
-    "    serializer=CSVSerializer()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5aece95",
-   "metadata": {},
-   "source": [
-    "### Prediction - SageMaker SDK & text/csv\n",
-    "샘플 데이터에 대해 추론을 수행합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "900509c0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "outputs = json.loads(xgb_predictor.predict(test_df.values[0:4,:]))\n",
-    "y_test_sample = y_test[0:4].values\n",
-    "y_pred_sample = outputs['pred']; y_prob_sample = outputs['prob']\n",
-    "y_test_sample, y_pred_sample, y_prob_sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d79688a6",
-   "metadata": {},
-   "source": [
-    "### Local Mode Endpoint Clean-up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d55647c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "xgb_predictor.delete_model()\n",
-    "xgb_predictor.delete_endpoint()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "017ba349",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "## 2.3. Deploy to Hosting Instance\n",
+    "## 2.2. Deploy to Hosting Instance\n",
     "\n",
     "로컬 모드에서 충분히 디버깅했으면 실제 호스팅 인스턴스로 배포할 차례입니다. 코드는 거의 동일하며, `instance_type`만 다르다는 점을 주목해 주세요! "
    ]
@@ -836,7 +731,7 @@
     "from sagemaker.xgboost.model import XGBoostModel\n",
     "\n",
     "xgb_model = XGBoostModel(\n",
-    "    model_data=s3_path,\n",
+    "    model_data=s3_model_path,\n",
     "    role=role,\n",
     "    entry_point=\"src/inference.py\",\n",
     "    framework_version=XGB_FRAMEWORK_VERSION,\n",
@@ -1119,6 +1014,22 @@
     "# xgb_predictor.delete_endpoint()\n",
     "# xgb_model.delete_model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "922068bd-fc3b-4bb2-8dbe-c93d95f2caf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163f5a19-986a-4d36-a085-ad7664acd525",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
