--- a/lab_2_serving/2.1.Deploy.ipynb
+++ b/lab_2_serving/2.1.Deploy.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "09065721",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# SageMaker Endpoint (Single Model Endpoint)\n",
     "---\n",
@@ -45,7 +47,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cdf6352c-072d-47bb-9f52-5703f624d7d8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import sys, IPython\n",
@@ -55,7 +59,7 @@
     "\n",
     "if install_needed:\n",
     "    print(\"===> Installing deps and restarting kernel. Please change 'install_needed = False' and run this code cell again.\")\n",
-    "    !{sys.executable} -m pip install -U sagemaker locust pyngrok xgboost==1.3.1\n",
+    "    !{sys.executable} -m pip install -U sagemaker locust pyngrok xgboost==1.3.1 pandas==1.5.3\n",
     "    IPython.Application.instance().kernel.do_shutdown(True)\n",
     "else:\n",
     "    import sagemaker, xgboost\n",
@@ -206,7 +210,7 @@
    "source": [
     "!rm -rf model && mkdir model && cp -r ../lab_1_training/model/* ./model/\n",
     "!rm -rf ./model/model.tar.gz\n",
-    "# !rm -rf model && mkdir model && tar -xzvf model.tar.gz -C model"
+    "!rm -rf model && mkdir model && tar -xzvf model.tar.gz -C model"
    ]
   },
   {
@@ -332,7 +336,6 @@
     "        작성 필요\n",
     "    '''\n",
     "    return np.vstack((y_preds, y_probs))\n",
-    "\n",
     "\n",
     "def output_fn(predictions, content_type=\"application/json\"):\n",
     "    \"\"\"\n",
@@ -1048,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
