--- a/lab_2_serving/2.1.Deploy.ipynb
+++ b/lab_2_serving/2.1.Deploy.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "809dde34-c57d-45e9-b538-5f3c63f74c0a",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0e3e2d6",
    "metadata": {
     "tags": []
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ad63102",
    "metadata": {
     "tags": []
@@ -167,12 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b820e0cc",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('sagemaker-us-west-2-322537213286', 'arn:aws:iam::322537213286:role/service-role/AmazonSageMaker-ExecutionRole-20230528T120509')\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "import sagemaker\n",
@@ -201,12 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a58c6bc",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cp: cannot stat ‘../lab_1_training/model/*’: No such file or directory\n",
+      "xgboost-model\n"
+     ]
+    }
+   ],
    "source": [
     "!rm -rf model && mkdir model && cp -r ../lab_1_training/model/* ./model/\n",
     "!rm -rf ./model/model.tar.gz\n",
@@ -215,12 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e3010604",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/xgboost/compat.py:31: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/xgboost/data.py:192: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "import xgboost as xgb\n",
     "import numpy as np\n",
@@ -237,12 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7407029b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.10092484, 0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_prob = model.predict(dtest)\n",
     "y_pred = np.array([1 if e >= 0.5 else 0 for e in y_prob])\n",
@@ -275,12 +314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fc79db23-e4f6-4327-bf6a-d1c2df396fbd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting src/inference.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile src/inference.py\n",
     "import os\n",
@@ -379,12 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f51977cb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xgboost-model\n",
+      "upload: ./model.tar.gz to s3://sagemaker-us-west-2-322537213286/sm-special-webinar/deploy/model.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "prefix = 'sm-special-webinar/deploy'\n",
     "s3_model_path = f's3://{bucket}/{prefix}/model.tar.gz'\n",
