--- a/lab_1_training/1.1.SageMaker-Training.ipynb
+++ b/lab_1_training/1.1.SageMaker-Training.ipynb
@@ -209,7 +209,7 @@
     "from sagemaker.xgboost.estimator import XGBoost\n",
     "\n",
     "estimator = XGBoost(\n",
-    "    entry_point=\"xgboost_starter_script.py\",\n",
+    "    entry_point=\"xgboost_script.py\",\n",
     "    source_dir='src',\n",
     "    output_path=output_path,\n",
     "    code_location=code_location,\n",
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
