--- a/lab_2_serving/2.2.Load-Testing.ipynb
+++ b/lab_2_serving/2.2.Load-Testing.ipynb
@@ -71,8 +71,7 @@
     "\n",
     "if setup_needed:\n",
     "    print(\"===> Setting the authtoken. Please change 'setup_needed = False' and run this code cell again.\")\n",
-    "    # ngrok.set_auth_token(\"[YOUR-TOKEN]\")\n",
-    "    ngrok.set_auth_token(\"26SxmCEqO3O2hoN66kqhYOavmSs_qnAAY9g3hRfPKmeqZq1v\")\n",
+    "    ngrok.set_auth_token(\"[YOUR-TOKEN]\")\n",
     "    IPython.Application.instance().kernel.do_shutdown(True)"
    ]
   },
@@ -543,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
