--- a/lab_1_training/1.1.SageMaker-Training.ipynb
+++ b/lab_1_training/1.1.SageMaker-Training.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "1f910f0b-dbb0-4598-bde5-11f0249af94a",
    "metadata": {
     "scrolled": true,
@@ -55,10 +55,79 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Redirecting to /bin/systemctl stop docker.service\n",
+      "Warning: Stopping docker.service, but it can still be activated by:\n",
+      "  docker.socket\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already revised\n"
+      "Add data-root and default-shm-size=10G\n",
+      "sending incremental file list\n",
+      "created directory /home/ec2-user/SageMaker/.container\n",
+      "docker/\n",
+      "docker/buildkit/\n",
+      "docker/buildkit/cache.db\n",
+      "         32,768 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=24/37)\n",
+      "docker/buildkit/containerdmeta.db\n",
+      "         16,384 100%   15.62MB/s    0:00:00 (xfr#2, to-chk=23/37)\n",
+      "docker/buildkit/metadata_v2.db\n",
+      "         16,384 100%   15.62MB/s    0:00:00 (xfr#3, to-chk=22/37)\n",
+      "docker/buildkit/snapshots.db\n",
+      "         16,384 100%   15.62MB/s    0:00:00 (xfr#4, to-chk=21/37)\n",
+      "docker/buildkit/content/\n",
+      "docker/buildkit/content/ingest/\n",
+      "docker/buildkit/executor/\n",
+      "docker/containers/\n",
+      "docker/image/\n",
+      "docker/image/overlay2/\n",
+      "docker/image/overlay2/repositories.json\n",
+      "             19 100%   18.55kB/s    0:00:00 (xfr#5, to-chk=16/37)\n",
+      "docker/image/overlay2/distribution/\n",
+      "docker/image/overlay2/imagedb/\n",
+      "docker/image/overlay2/imagedb/content/\n",
+      "docker/image/overlay2/imagedb/content/sha256/\n",
+      "docker/image/overlay2/imagedb/metadata/\n",
+      "docker/image/overlay2/imagedb/metadata/sha256/\n",
+      "docker/image/overlay2/layerdb/\n",
+      "docker/network/\n",
+      "docker/network/files/\n",
+      "docker/network/files/local-kv.db\n",
+      "         65,536 100%   62.50MB/s    0:00:00 (xfr#6, to-chk=7/37)\n",
+      "docker/overlay2/\n",
+      "docker/overlay2/backingFsBlockDev\n",
+      "docker/overlay2/l/\n",
+      "docker/plugins/\n",
+      "docker/plugins/storage/\n",
+      "docker/plugins/storage/ingest/\n",
+      "docker/plugins/tmp/\n",
+      "docker/runtimes/\n",
+      "docker/swarm/\n",
+      "docker/tmp/\n",
+      "docker/trust/\n",
+      "docker/volumes/\n",
+      "docker/volumes/backingFsBlockDev\n",
+      "docker/volumes/metadata.db\n",
+      "         32,768 100%   31.25MB/s    0:00:00 (xfr#7, to-chk=0/37)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Redirecting to /bin/systemctl start docker.service\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Docker Restart\n"
      ]
     }
    ],
@@ -79,7 +148,7 @@
     "    echo \"Add data-root and default-shm-size=$MEMORY_SIZE\"\n",
     "    sudo cp $DAEMON_PATH/daemon.json $DAEMON_PATH/daemon.json.bak\n",
     "    sudo cat $DAEMON_PATH/daemon.json.bak | jq '. += {\"data-root\":\"/home/ec2-user/SageMaker/.container/docker\",\"default-shm-size\":\"'$MEMORY_SIZE'\"}' | sudo tee $DAEMON_PATH/daemon.json > /dev/null\n",
-    "    sudo rsync -aP /var/lib/docker/ /home/ec2-user/SageMaker/.container/docker\n",
+    "    sudo rsync -aP /var/lib/docker /home/ec2-user/SageMaker/.container\n",
     "    sudo service docker start\n",
     "    echo \"Docker Restart\"\n",
     "fi"
